# rbeaver

./: .gitignore  CHINESE_ENCODING_FIX.md  Cargo.toml  DATABASE_OBJECT_CATEGORIZATION.md
.github/: README.md
.github/scripts/: release.sh
.github/workflows/: build-optimized.yml  build-simple.yml  ci.yml  quality.yml
src/: app.rs  lib.rs  main.rs
src/config/: settings.rs
src/database/: connection.rs  mod.rs  postgresql.rs  postgresql_queries.rs  query.rs  traits.rs
src/ui/: confirmation_dialog.rs  connection_dialog.rs  database_tree.rs  fonts.rs  mod.rs  query_editor.rs  result_table.rs  theme.rs
src/ui/components/: button.rs  input.rs  mod.rs  table.rs
src/utils/: error.rs  logging.rs  mod.rs
ui/: confirmation_dialog.rs
