[package]
name = "rbeaver"
version = "0.1.0"
edition = "2021"
authors = ["RBeaver Team"]
description = "A DBeaver-like database management tool built with Rust and egui"
license = "MIT"

[[bin]]
name = "rbeaver"
path = "src/main.rs"

[dependencies]
# GUI Framework
eframe = "0.28"
egui = "0.28"
egui_extras = "0.28"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
hex = "0.4"
dirs = "5.0"
arboard = "3.4"

# Syntax highlighting for SQL
syntect = "5.0"

[features]
default = ["postgresql"]
postgresql = []
mysql = []
sqlite = []
